# world-transmuter

./: .gitignore  Cargo.toml  README.md  format_project.sh
src/: lib.rs  types.rs  version_names.rs
src/helpers/: bit_storage.rs  block_flattening_v1450.rs  block_state.rs  components.rs  flatten_chunk_v1451.rs  flatten_item_stack_v1451.rs  flatten_stats_v1451.rs  gson_lenient_fix.rs  hooks.rs  item_name_v102.rs  item_stack_to_data_components_fix.rs  json_parser.rs  macros.rs  mc_namespace_map.rs  mod.rs  particle_to_nbt_fix.rs  remove_feature_flag.rs  rename.rs  resource_location.rs  spawn_egg_name_v105.rs  walkers.rs
src/versions/: mod.rs  v100.rs  v101.rs  v102.rs  v1022.rs  v105.rs  v106.rs  v107.rs  v108.rs  v109.rs  v110.rs  v111.rs  v1125.rs  v113.rs  v1344.rs  v135.rs  v143.rs  v1446.rs  v1450.rs  v1451.rs  v1456.rs  v1458.rs  v1460.rs  v1466.rs  v147.rs  v1470.rs  v1474.rs  v1475.rs  v1480.rs  v1483.rs  v1484.rs  v1486.rs  v1487.rs  v1488.rs  v1490.rs  v1492.rs  v1494.rs  v1496.rs  v1500.rs  v1501.rs  (+172 more)
