[package]
name = "world-transmuter"
version = "0.1.0"
edition = "2021"

[dependencies]

ahash = "0.8.3"
bitvec = { version = "1.0.0", default-features = false }
log = "0.4.16"
nom = "7.1.1"
strength_reduce = "0.2.3"
uuid = "1"
valence_nbt = "0.7"
world-transmuter-engine = "0.1.0"

[dev-dependencies]

attohttpc = "0.26.0"
regex = "1.5.5"
valence_nbt = { version = "0.7", features = ["snbt"] }

[features]

# Enable tests that could potentially break without code having been updated, because Minecraft has updated.
update_checks = []
